--- a/style.css
+++ b/style.css
@@ -63,9 +63,9 @@ header > p {
 }
 
 nav {
+    font-family: Arial, Helvetica, sans-serif;
     background-color: var(--cor5);
     padding: 10px;
-    box-shadow: 0px 7px 10px rgba(0, 0, 0, 0.363);
 }
 
 nav > a {
